Completed 'Navigation Float' exercise.

--- a/05. Position & Grid/04_Navigation-float/style.css
+++ b/05. Position & Grid/04_Navigation-float/style.css
@@ -80,6 +80,7 @@ a {
   max-width: 44%;
   border-left: 2px solid lightgrey;
   vertical-align: top;
+  line-height: 1.5;
   font-style: italic;
   color: gray;
 }
